--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,7 @@
     <title>index in templates</title>
 </head>
 <body>
-Mykola
-test
-Deploy
+    <h3>
+ВИ МОЯ ЛЮБІМА КІТОЧКА, ЦІЛЮЙКАЮ ВАС </h3>
 </body>
 </html>
